--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,12 @@
       package="com.exampleservice"
       android:versionCode="1"
       android:versionName="1.0">
-      
+     
+    
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8" />
+     
+     
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
@@ -15,5 +19,5 @@
         </activity>
     <service android:name=".MyService"></service>
     </application>
-    <uses-sdk android:minSdkVersion="7" />
+   
 </manifest> 
