--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.exampleservice"
+      package="com.example.service"
       android:versionCode="1"
       android:versionName="1.0">
      
@@ -10,7 +10,7 @@
      
      
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.example.service.MainActivity"
                   android:label="@string/app_name" 
                   android:launchMode="singleInstance">
             <intent-filter>
@@ -18,7 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <service android:name=".MyService"></service>
+
+   
+   
+    <service android:enabled="true" android:name="com.example.service.MyService" 
+        android:exported="true">
+          
+        </service>
     </application>
    
 </manifest> 
