--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,9 +9,9 @@
      <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="8" />
      
      
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" >
+    <application android:icon="@drawable/custom_icon" android:label="@string/app_name" >
         
-        <activity android:name="com.example.service.MainActivity"
+        <activity android:name=".ServiceControl"
                   android:label="@string/app_name" 
                   android:launchMode="singleInstance"
                   android:screenOrientation="portrait">
